compare OCR with SISR on the FUNSD dataset

--- a/ocr_with_sisr/ocr_with_sisr_on_funsd.ipynb
+++ b/ocr_with_sisr/ocr_with_sisr_on_funsd.ipynb
@@ -19,6 +19,7 @@
     "import glob\n",
     "import torchvision\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from thefuzz import fuzz\n",
     "from torchvision import io\n",
     "from pytesseract import Output\n",
@@ -30,8 +31,12 @@
     "from shapely.geometry import Polygon\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
-    "PATH_2_TESSERACT = \"/usr/local/bin/tesseract\"\n",
-    "pytesseract.tesseract_cmd = PATH_2_TESSERACT"
+    "PATH_2_TESSERACT = \"/usr/bin/tesseract\"\n",
+    "pytesseract.tesseract_cmd = PATH_2_TESSERACT\n",
+    "\n",
+    "sys.path.append(\"/data/local/data/personal/github_repos/sr_server/\")\n",
+    "\n",
+    "from sisr import get_sisr_forward_fn"
    ]
   },
   {
@@ -86,10 +91,11 @@
    "outputs": [],
    "source": [
     "class FUNSDDataset(Dataset):\n",
-    "    def __init__(self, images_path, annotations_path):\n",
+    "    def __init__(self, images_path, annotations_path, sr_fn=None):\n",
     "        super().__init__()\n",
     "        self.image_paths = sorted(glob.glob(os.path.join(images_path, \"*.png\")))\n",
     "        self.annotation_paths = sorted(glob.glob(os.path.join(annotations_path, \"*.json\")))\n",
+    "        self.sr_fn = sr_fn\n",
     "        \n",
     "        # verify corectness of data\n",
     "        assert len(self.image_paths) == len(self.annotation_paths), \"ERROR: Must have 1-to-1 image-to-annotation correspondence\"\n",
@@ -103,6 +109,10 @@
     "        # read bounding boxes with their corresonding text predictions\n",
     "        json_data = json.load(open(self.annotation_paths[idx]))\n",
     "        bboxes = [OcrBbox(text=w[\"text\"], bbox=tuple(w[\"box\"])) for p in json_data[\"form\"] for w in p[\"words\"]]\n",
+    "        if self.sr_fn:\n",
+    "            image = self.sr_fn(image)\n",
+    "            for box in bboxes:\n",
+    "                box.bbox = tuple(c * 4 for c in box.bbox)\n",
     "        return {\"image\": image, \"bboxes\": bboxes}\n",
     "    \n",
     "    def __len__(self):\n",
@@ -314,7 +324,7 @@
     "            gt_text, pred_text = pre_process_text(gt_text), pre_process_text(pred_text)\n",
     "            \n",
     "            # consider similarity ratio only if the IoU is above a threshold and thus the GT text was recognized\n",
-    "            img_level_similarities.append(fuzz.ratio(pred_text.lower(), gt_text.lower()) / 100. if iou > IOU_THRESHOLD else 0)\n",
+    "            img_level_similarities.append(fuzz.ratio(pred_text, gt_text) / 100. if iou > IOU_THRESHOLD else 0)\n",
     "        similarities.append(img_level_similarities)\n",
     "    return similarities"
    ]
@@ -334,8 +344,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "funsd_train_dir = \"/Users/bogdan.vlad/Documents/code/mac_notebooks/personal/ocr_data/funsd_dataset/training_data\"\n",
-    "funsd_test_dir = \"/Users/bogdan.vlad/Documents/code/mac_notebooks/personal/ocr_data/funsd_dataset/testing_data\"\n",
+    "funsd_train_dir = \"/data/local/data/personal/ocr_data/funsd_dataset/training_data/\"\n",
+    "funsd_test_dir = \"/data/local/data/personal/ocr_data/funsd_dataset/testing_data\"\n",
     "\n",
     "train_dset = FUNSDDataset(images_path=os.path.join(funsd_train_dir, \"images\"), \n",
     "                          annotations_path=os.path.join(funsd_train_dir, \"annotations\"))\n",
@@ -489,9 +499,291 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b1fcbe75",
+   "metadata": {},
+   "source": [
+    "### Run super-resolution on the FUNSD dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b118e231",
+   "id": "746c0261",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "swin_ir_fn = get_sisr_forward_fn(model_name=\"swin_ir\", use_tiling=False)\n",
+    "super_test_dset = FUNSDDataset(images_path=os.path.join(funsd_test_dir, \"images\"), \n",
+    "                               annotations_path=os.path.join(funsd_test_dir, \"annotations\"), \n",
+    "                               sr_fn=swin_ir_fn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f614497",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "super_similarities = evaluate_ocr_system(super_test_dset, run_tesseract)\n",
+    "super_similarities_flattened = [s for similarity_list in super_similarities for s in similarity_list]  # flatten to list of word-level similarities\n",
+    "print(f\"Mean similarity score: {np.mean(super_similarities_flattened):.2f}\")\n",
+    "print(f\"Median similarity score: {np.median(super_similarities_flattened):.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53890ebf",
+   "metadata": {},
+   "source": [
+    "### See how the OCR system behaves in general on the super-resoluted images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cc55da9",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "dset_item = super_test_dset[1]\n",
+    "image = dset_item[\"image\"]\n",
+    "bboxes_gt = dset_item[\"bboxes\"]\n",
+    "\n",
+    "# run the OCR model on the image\n",
+    "bboxes_dict = run_tesseract(image)\n",
+    "bboxes_pred = tesseract_output_2_ocr_box(bboxes_dict)\n",
+    "\n",
+    "# match the GT bounding boxes with the PRED bounding boxes, apply filter, and sort \n",
+    "matching = match_pred_to_gt_bboxes(gt_bboxes=bboxes_gt, pred_bboxes=bboxes_pred)\n",
+    "filtered_matching = [m for m in matching if len(m[\"gt\"].text.strip()) and len(m[\"pred\"].text.strip())]  # remove spaces and tabs\n",
+    "filtered_matching = sorted(filtered_matching, key=lambda x: x[\"iou\"], reverse=True)\n",
+    "\n",
+    "for m in filtered_matching:\n",
+    "    gt_bbox = m[\"gt\"]\n",
+    "    pred_bbox = m[\"pred\"]\n",
+    "    iou = m[\"iou\"]\n",
+    "\n",
+    "    gt_points, pred_points = gt_bbox.bbox, pred_bbox.bbox\n",
+    "    gt_text, pred_text = gt_bbox.text, pred_bbox.text\n",
+    "    gt_text, pred_text = pre_process_text(gt_text), pre_process_text(pred_text)\n",
+    "    \n",
+    "    crop_gt = image[gt_points[1] : gt_points[3] + 1, gt_points[0] : gt_points[2] + 1, :]\n",
+    "    crop_pred = image[pred_points[1] : pred_points[3] + 1, pred_points[0] : pred_points[2] + 1, :]\n",
+    "    \n",
+    "    plt.figure(figsize=(4, 2))\n",
+    "    ax1, ax2 = plt.subplot(1, 2, 1), plt.subplot(1, 2, 2)\n",
+    "    \n",
+    "    ax1.imshow(crop_gt)\n",
+    "    ax1.axis(\"off\")\n",
+    "    ax1.set_title(\"GT Bounding Box\", fontdict={\"fontsize\": 10})\n",
+    "\n",
+    "    ax2.imshow(crop_pred)\n",
+    "    ax2.axis(\"off\")\n",
+    "    ax2.set_title(\"PRED Bounding Box\", fontdict={\"fontsize\": 10})\n",
+    "    \n",
+    "    plt.subplots_adjust(top=0.6, wspace=0.5)\n",
+    "    plt.suptitle(f'GT: \"{gt_text}\"\\nPRED: \"{pred_text}\"\\nSIMILARITY: {(fuzz.ratio(gt_text, pred_text) / 100. if iou > IOU_THRESHOLD else 0):.2f}', fontsize=11)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bf72e60",
+   "metadata": {},
+   "source": [
+    "### See the differences visually"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d80ff896",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.style.use('bmh')\n",
+    "fig, ax = plt.subplots(figsize=(10, 3))\n",
+    "\n",
+    "# Example data\n",
+    "methods = ('NO SR', 'SR',)\n",
+    "y_pos = (0.1, 0.3)\n",
+    "performance = np.array([np.mean(similarities_flattened), np.mean(super_similarities_flattened)])\n",
+    "\n",
+    "ax.barh(y_pos, performance, align='center', height=0.1)\n",
+    "# Add the values on the bars\n",
+    "for i, v in enumerate(performance):\n",
+    "    ax.text(v + 0.01, y_pos[i], str(round(v, 2)), va='center')\n",
+    "\n",
+    "ax.set_yticks(y_pos, labels=methods)\n",
+    "ax.set_xticks(np.arange(0, 1.1, 0.1))\n",
+    "ax.invert_yaxis()  # labels read top-to-bottom\n",
+    "ax.set_xlabel('Average Text Similarity')\n",
+    "# ax.set_title('OCR performance on the FUNSD dataset')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e29a5215",
+   "metadata": {},
+   "source": [
+    "### See examples where SISR helps the text detector\n",
+    "#### a.k.a: places where we now have new detections, which were not found by the OCR detector on the original images but are found on the super-resoluted images "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fe452ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dset_item = super_test_dset[-2]\n",
+    "super_image = dset_item[\"image\"]\n",
+    "bboxes_gt = dset_item[\"bboxes\"]\n",
+    "\n",
+    "# run the OCR model on the image\n",
+    "bboxes_dict = run_tesseract(super_image)\n",
+    "bboxes_pred = tesseract_output_2_ocr_box(bboxes_dict)\n",
+    "\n",
+    "# match the GT bounding boxes with the PRED bounding boxes, apply filter, and sort \n",
+    "matching_super = match_pred_to_gt_bboxes(gt_bboxes=bboxes_gt, pred_bboxes=bboxes_pred)\n",
+    "filtered_matching_super = [m for m in matching_super if len(m[\"gt\"].text.strip()) and len(m[\"pred\"].text.strip())]  # remove spaces and tabs\n",
+    "filtered_matching_super = sorted(filtered_matching_super, key=lambda x: x[\"iou\"], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cac23b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dset_item = test_dset[-2]\n",
+    "original_image = dset_item[\"image\"]\n",
+    "bboxes_gt = dset_item[\"bboxes\"]\n",
+    "\n",
+    "# run the OCR model on the image\n",
+    "bboxes_dict = run_tesseract(original_image)\n",
+    "bboxes_pred = tesseract_output_2_ocr_box(bboxes_dict)\n",
+    "\n",
+    "# match the GT bounding boxes with the PRED bounding boxes, apply filter, and sort \n",
+    "matching = match_pred_to_gt_bboxes(gt_bboxes=bboxes_gt, pred_bboxes=bboxes_pred)\n",
+    "filtered_matching = [m for m in matching if len(m[\"gt\"].text.strip()) and len(m[\"pred\"].text.strip())]  # remove spaces and tabs\n",
+    "filtered_matching = sorted(filtered_matching, key=lambda x: x[\"iou\"], reverse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e44ba971",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "for _, r in filtered_super_df[filtered_super_df[\"gt_box\"].apply(lambda b: b not in set(filtered_df[\"gt_box\"].values))].iterrows():\n",
+    "    pred_box = r[\"pred_box\"]\n",
+    "    pred_text = r[\"pred_text\"]\n",
+    "    small_box = tuple(c // 4 for c in pred_box)\n",
+    "    \n",
+    "    plt.figure(figsize=(4, 2))\n",
+    "    \n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    plt.imshow(original_image[small_box[1]:small_box[3], small_box[0]:small_box[2], :])\n",
+    "    plt.axis(\"off\")\n",
+    "    \n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    plt.imshow(super_image[pred_box[1]:pred_box[3], pred_box[0]:pred_box[2], :])\n",
+    "    plt.axis(\"off\")\n",
+    "    \n",
+    "    plt.subplots_adjust(top=0.8, wspace=0.5)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "157a8482",
+   "metadata": {},
+   "source": [
+    "### See examples where SISR helps (or not) the text recognition\n",
+    "#### a.k.a., places where the OCR text recogniton model outputs different characters after applying the super-resolution pre-processing step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88ff907f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_df = pd.DataFrame(data=filtered_matching)\n",
+    "filtered_df[\"gt_box\"] = filtered_df[\"gt\"].apply(lambda t: t.bbox)\n",
+    "filtered_df[\"gt_text\"] = filtered_df[\"gt\"].apply(lambda t: t.text)\n",
+    "filtered_df[\"pred_box\"] = filtered_df[\"pred\"].apply(lambda t: t.bbox)\n",
+    "filtered_df[\"pred_text\"] = filtered_df[\"pred\"].apply(lambda t: t.text)\n",
+    "filtered_df = filtered_df.drop(columns=[\"gt\", \"pred\"])\n",
+    "\n",
+    "filtered_super_df = pd.DataFrame(data=filtered_matching_super)\n",
+    "filtered_super_df[\"gt_box\"] = filtered_super_df[\"gt\"].apply(lambda t: tuple(c // 4 for c in t.bbox))\n",
+    "filtered_super_df[\"gt_text\"] = filtered_super_df[\"gt\"].apply(lambda t: t.text)\n",
+    "filtered_super_df[\"pred_box\"] = filtered_super_df[\"pred\"].apply(lambda t: t.bbox)\n",
+    "filtered_super_df[\"pred_text\"] = filtered_super_df[\"pred\"].apply(lambda t: t.text)\n",
+    "filtered_super_df = filtered_super_df.drop(columns=[\"gt\", \"pred\"])\n",
+    "\n",
+    "merged_df = pd.merge(left=filtered_df, right=filtered_super_df, on=\"gt_box\", suffixes=(\"_original\", \"_super\"))\n",
+    "merged_df[\"gt_text\"] = merged_df[\"gt_text_original\"]\n",
+    "merged_df = merged_df.drop(columns=[\"gt_text_original\", \"gt_text_super\"])\n",
+    "new_column_order = [\"gt_box\", \"gt_text\", \"pred_box_original\", \"pred_text_original\", \"iou_original\", \"pred_box_super\", \"pred_text_super\", \"iou_super\"]\n",
+    "merged_df = merged_df[new_column_order]\n",
+    "merged_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92599f64",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "for _, r in merged_df[merged_df.apply(lambda r: r[\"pred_text_original\"] != r[\"pred_text_super\"], axis=1)][:].iterrows():\n",
+    "    pred_text_original = r[\"pred_text_original\"]\n",
+    "    pred_text_super = r[\"pred_text_super\"]\n",
+    "    \n",
+    "    pred_box_original = r[\"pred_box_original\"]\n",
+    "    pred_box_super = r[\"pred_box_super\"]\n",
+    "    \n",
+    "    gt_box = r[\"gt_box\"]\n",
+    "    gt_text = r[\"gt_text\"]\n",
+    "    \n",
+    "    plt.figure(figsize=(4, 2))\n",
+    "    \n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    plt.imshow(original_image[pred_box_original[1]:pred_box_original[3], pred_box_original[0]:pred_box_original[2], :])\n",
+    "    plt.axis(\"off\")\n",
+    "    plt.title(f\"ORIGINAL\\n'{pred_text_original}'\", fontdict={\"fontsize\": 10})\n",
+    "    \n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    plt.imshow(super_image[pred_box_super[1]:pred_box_super[3], pred_box_super[0]:pred_box_super[2], :])\n",
+    "    plt.axis(\"off\")\n",
+    "    plt.title(f\"SR\\n'{pred_text_super}'\", fontdict={\"fontsize\": 10})\n",
+    "    \n",
+    "    plt.subplots_adjust(top=0.8, wspace=0.5)\n",
+    "    plt.suptitle(f\"ACTUAL TEXT: '{gt_text}'\", fontsize=11)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b16e001",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -513,7 +805,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
